LIST OF CHANGES
---------------

 - use low_load queue for upstream_tags qc (accesses tracking and qc DBs)

release 48.4
 - Make group to change analysis directories to optional
 - use LSB_BIND_CPU_LIST over LSB_MCPU_HOSTS to determine number of threads to use
   within a job (cope with hyperthreading where LSF gives one slot to what is presented
   as two cpu - this will try to make use of apparent CPUs)
 - make number of slots used by seq_alignment configurable
 - allow running on file server by
   + use npg_tracking::util::abs_path to patch absolute paths
   + avoid perl chdir to give job working dir
 - drop not_strip_bam_tag option, explicitly disable bam tag stripping in seq_alignment
 - add daemon.ini and optionally add command_prefix to commands
 - use lowload lsf queue
 - seqchksum_comparator to cope with higher plexing (with a chdir)
 - force HiSeq rapid run V2 flowcells (BCXX suffix) to use p4
 - enable p4 single-end processing (bwa mem only, not RNA or non-consented human split)

release 48.3
 - get informatrion about a spike directly from lims
 - use old bam_alignment.pl, not P4, if omission of alignments requested
 - option (default on) to force analyses to assume phix spike
 - force P4 and so bwa mem for runs with reads > 100bp
 - enable human split for P4 in seq_alignment (using bwa aln, adapter trimming)
 - run old warehouse loader live in order to pick up pool-level information
     that is currently needed in SeqQC
 - gclp-specific function list for archival

release 48.2
 - added update_ml_warehouse
 - removed sf48 from list of staging areas in green room

release 48.1
 - pipeline-specific function lists
 - setting olb or qc_run flags to true results in olb or qc_run function lists used
 - qc_run flag on its own does not cause a change of lims driver
 - unused pipeline flags and options removed
 - for gclp runs, the analysis daemon to pass gclp function list to analysis pipeline

release 48.0